--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "npm run build && mv build/index.html build/200.html && surge build"
-
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,5 +45,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "git-scripts": "^0.4.3",
+    "surge": "^0.21.3"
+  },
+  "git": { 
+    "scripts": { 
+      "pre-push": "surge --project ./ --domain evantaylor.surge.sh/" 
+    } 
   }
 }
