--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "git": { 
     "scripts": { 
-      "pre-push": "surge --project ./ --domain evantaylor.surge.sh/" 
+      "pre-push": "npm run deploy" 
     } 
   }
 }
