--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "3.4.0",
     "react-scroll": "^1.7.16",
     "react-social-media-icons": "^1.1.0",
-    "social-media-icons-react": "^1.0.10"
+    "social-media-icons-react": "^1.0.10",
+    "styled-components": "^5.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
